Add IDockableControl interface.

--- a/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
+++ b/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ErrorLevel.cs" />
     <Compile Include="FileLocalizer.cs" />
     <Compile Include="FormStateAutoSaver.cs" />
+    <Compile Include="IDockableControl.cs" />
     <Compile Include="JsonErrorInfoExtensions.cs" />
     <Compile Include="JsonStyleSelector.cs" />
     <Compile Include="JsonSyntaxDescriptor.cs" />
