--- a/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
+++ b/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
@@ -62,6 +62,9 @@
     <Compile Include="LocalizedString.cs" />
     <Compile Include="LocalizedTextProvider.cs" />
     <Compile Include="Localizers.cs" />
+    <Compile Include="MdiTabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MenuCaptionBarForm.cs">
       <SubType>Form</SubType>
     </Compile>
