Maintain a collection of open PGN editors regardless of where they are docked.

--- a/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
+++ b/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AutoSaveFileNamePair.cs" />
     <Compile Include="BuiltInEnglishLocalizer.cs" />
     <Compile Include="CombinedUIActionInterface.cs" />
+    <Compile Include="DockableControlHelpers.cs" />
     <Compile Include="ErrorLevel.cs" />
     <Compile Include="FileLocalizer.cs" />
     <Compile Include="FormStateAutoSaver.cs" />
