--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>MdiContainerForm.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="PgnEditorExtensions.cs" />
     <Compile Include="PgnErrorInfoExtensions.cs" />
     <Compile Include="PgnStyleSelector.cs" />
     <Compile Include="PgnSyntaxDescriptor.cs" />
