--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Native\NativeMethods.cs" />
     <Compile Include="Native\ResizeMode.cs" />
     <Compile Include="Native\Structures.cs" />
+    <Compile Include="Native\WindowCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\CompactSettingWriter.cs" />
     <Compile Include="Storage\FileNameType.cs" />
