Group error generating methods in new JsonParseErrors class.

--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Text\Json\JsonMapSyntax.cs" />
     <Compile Include="Text\Json\JsonMissingValueSyntax.cs" />
     <Compile Include="Text\Json\JsonMultiValueSyntax.cs" />
+    <Compile Include="Text\Json\JsonParseErrors.cs" />
     <Compile Include="Text\Json\JsonParser.cs" />
     <Compile Include="Text\Json\JsonRootLevelValueDelimiterSyntax.cs" />
     <Compile Include="Text\Json\JsonSpecialCharacter.cs" />
