Move definitions for expected JSON parse trees to their own class.

--- a/Eutherion/Tests/Eutherion.Tests.csproj
+++ b/Eutherion/Tests/Eutherion.Tests.csproj
@@ -42,6 +42,7 @@
     <Compile Include="CircularBufferTests.cs" />
     <Compile Include="EnumArrayTests.cs" />
     <Compile Include="ExpectedJsonTree.cs" />
+    <Compile Include="ExpectedJsonTrees.cs" />
     <Compile Include="JsonErrorInfoTests.cs" />
     <Compile Include="JsonParserTests.cs" />
     <Compile Include="JsonSyntaxTests.cs" />
