--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Text\Json\JsonCurlyOpenSyntax.cs" />
     <Compile Include="Text\Json\JsonErrorCode.cs" />
     <Compile Include="Text\Json\JsonErrorInfo.cs" />
+    <Compile Include="Text\Json\JsonErrorInfoParameter.cs" />
     <Compile Include="Text\Json\JsonErrorLevel.cs" />
     <Compile Include="Text\Json\JsonErrorStringSyntax.cs" />
     <Compile Include="Text\Json\JsonIntegerLiteralSyntax.cs" />
