--- a/Benchmarks/packages.config
+++ b/Benchmarks/packages.config
@@ -3,7 +3,7 @@
   <package id="BenchmarkDotNet" version="0.12.0" targetFramework="net472" />
   <package id="BenchmarkDotNet.Annotations" version="0.12.0" targetFramework="net472" />
   <package id="CommandLineParser" version="2.4.3" targetFramework="net472" />
-  <package id="Eutherion.Common" version="1.0.0-rc" targetFramework="net472" />
+  <package id="Eutherion.Common" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.10.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.10.0" targetFramework="net472" />
