--- a/Eutherion/Tests/Eutherion.Tests.csproj
+++ b/Eutherion/Tests/Eutherion.Tests.csproj
@@ -66,6 +66,9 @@
     <PackageReference Include="Eutherion.Common">
       <Version>1.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Eutherion.Utilities">
+      <Version>1.2.0</Version>
+    </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.1</Version>
     </PackageReference>
