--- a/Sandra.UI/Sandra.UI.csproj
+++ b/Sandra.UI/Sandra.UI.csproj
@@ -134,6 +134,9 @@
     <PackageReference Include="Eutherion.Common">
       <Version>1.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Eutherion.Utilities">
+      <Version>1.2.0</Version>
+    </PackageReference>
     <PackageReference Include="jacobslusser.ScintillaNET">
       <Version>3.6.3</Version>
     </PackageReference>
