--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -120,6 +120,9 @@
     <PackageReference Include="Eutherion.Common">
       <Version>1.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Eutherion.UIActions">
+      <Version>1.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Eutherion.Utilities">
       <Version>1.2.0</Version>
     </PackageReference>
