--- a/Eutherion/Win/Eutherion.Win.csproj
+++ b/Eutherion/Win/Eutherion.Win.csproj
@@ -121,6 +121,7 @@
     <Compile Include="UIActions\UIMenu.cs" />
     <Compile Include="Utils\KeyUtilities.cs" />
     <Compile Include="Utils\RegistryHelper.cs" />
+    <Compile Include="Utils\ShortcutKeys.cs" />
     <Compile Include="Utils\ThemeHelper.cs" />
     <Compile Include="WorkingCopyTextFile.cs" />
   </ItemGroup>
