--- a/Eutherion/Shared/Eutherion.Shared.csproj
+++ b/Eutherion/Shared/Eutherion.Shared.csproj
@@ -39,54 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Text\ISpan.cs" />
-    <Compile Include="Text\Json\IJsonSymbol.cs" />
-    <Compile Include="Text\Json\JsonBackgroundListSyntax.cs" />
-    <Compile Include="Text\Json\JsonBackgroundSyntax.cs" />
-    <Compile Include="Text\Json\JsonBackgroundSyntaxVisitor.cs" />
-    <Compile Include="Text\Json\JsonBooleanLiteralSyntax.cs" />
-    <Compile Include="Text\Json\JsonColonSyntax.cs" />
-    <Compile Include="Text\Json\JsonCommaSyntax.cs" />
-    <Compile Include="Text\Json\JsonCommentSyntax.cs" />
-    <Compile Include="Text\Json\JsonCurlyCloseSyntax.cs" />
-    <Compile Include="Text\Json\JsonCurlyOpenSyntax.cs" />
-    <Compile Include="Text\Json\JsonErrorCode.cs" />
-    <Compile Include="Text\Json\JsonErrorInfo.cs" />
-    <Compile Include="Text\Json\JsonErrorInfoParameter.cs" />
     <Compile Include="Text\Json\JsonErrorInfoParameterDisplayHelper.cs" />
-    <Compile Include="Text\Json\JsonErrorLevel.cs" />
-    <Compile Include="Text\Json\JsonErrorStringSyntax.cs" />
-    <Compile Include="Text\Json\JsonIntegerLiteralSyntax.cs" />
-    <Compile Include="Text\Json\JsonKeyValueSyntax.cs" />
-    <Compile Include="Text\Json\JsonListSyntax.cs" />
-    <Compile Include="Text\Json\JsonMapSyntax.cs" />
-    <Compile Include="Text\Json\JsonMissingValueSyntax.cs" />
-    <Compile Include="Text\Json\JsonMultiValueSyntax.cs" />
-    <Compile Include="Text\Json\JsonParseErrors.cs" />
-    <Compile Include="Text\Json\JsonParser.cs" />
-    <Compile Include="Text\Json\JsonRootLevelValueDelimiterSyntax.cs" />
-    <Compile Include="Text\Json\JsonSpecialCharacter.cs" />
-    <Compile Include="Text\Json\JsonSquareBracketCloseSyntax.cs" />
-    <Compile Include="Text\Json\JsonSquareBracketOpenSyntax.cs" />
-    <Compile Include="Text\Json\JsonStringLiteralSyntax.cs" />
-    <Compile Include="Text\Json\JsonSymbolType.cs" />
-    <Compile Include="Text\Json\JsonSymbolVisitor.cs" />
-    <Compile Include="Text\Json\JsonSyntax.cs" />
-    <Compile Include="Text\Json\JsonUndefinedValueSyntax.cs" />
-    <Compile Include="Text\Json\JsonUnknownSymbolSyntax.cs" />
-    <Compile Include="Text\Json\JsonUnterminatedMultiLineCommentSyntax.cs" />
-    <Compile Include="Text\Json\JsonValue.cs" />
-    <Compile Include="Text\Json\JsonValueSyntax.cs" />
-    <Compile Include="Text\Json\JsonValueSyntaxVisitor.cs" />
-    <Compile Include="Text\Json\JsonValueWithBackgroundSyntax.cs" />
-    <Compile Include="Text\Json\JsonWhitespaceSyntax.cs" />
-    <Compile Include="Text\Json\RootJsonSyntax.cs" />
-    <Compile Include="Text\ReadOnlySeparatedSpanList.cs" />
-    <Compile Include="Text\ReadOnlySpanList.cs" />
-    <Compile Include="Text\StringLiteral.cs" />
     <Compile Include="Utils\FileUtilities.cs" />
     <Compile Include="Utils\HandlerIsAnonymousException.cs" />
-    <Compile Include="Utils\SafeLazyObjectCollection.cs" />
     <Compile Include="Utils\StringUtilities.cs" />
     <Compile Include="Utils\WeakEvent.cs" />
     <Compile Include="Utils\WeakEventInvocationException.cs" />
@@ -94,6 +49,9 @@
   <ItemGroup>
     <PackageReference Include="Eutherion.Common">
       <Version>1.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Eutherion.Text.Json">
+      <Version>0.1.0</Version>
     </PackageReference>
     <PackageReference Include="Eutherion.Utilities">
       <Version>1.3.0</Version>
