--- a/Eutherion/Tests/Eutherion.Tests.csproj
+++ b/Eutherion/Tests/Eutherion.Tests.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="Eutherion.Common">
       <Version>1.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Eutherion.Text.Json">
+      <Version>0.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Eutherion.Utilities">
       <Version>1.3.0</Version>
     </PackageReference>
