--- a/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
+++ b/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
@@ -137,6 +137,9 @@
     <PackageReference Include="Eutherion.Common">
       <Version>1.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Eutherion.Text.Json">
+      <Version>0.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Eutherion.UIActions">
       <Version>1.3.0</Version>
     </PackageReference>
