--- a/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
+++ b/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
@@ -73,7 +73,7 @@
     <PackageReference Include="Eutherion.Text.Json">
       <Version>1.4.0</Version>
     </PackageReference>
-    <PackageReference Include="Eutherion.Utilities">
+    <PackageReference Include="Eutherion.UIActions">
       <Version>1.4.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
