--- a/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
+++ b/Sandra.Chess/Tests/Sandra.Chess.Tests.csproj
@@ -76,6 +76,9 @@
     <PackageReference Include="Eutherion.UIActions">
       <Version>1.4.0</Version>
     </PackageReference>
+    <PackageReference Include="Eutherion.Utilities">
+      <Version>1.4.0</Version>
+    </PackageReference>
     <PackageReference Include="xunit">
       <Version>2.4.1</Version>
     </PackageReference>
