Move MoveCheckResult to its own file.

--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -45,6 +45,7 @@
     <Compile Include="EnumIndexedArray.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Move.cs" />
+    <Compile Include="MoveCheckResult.cs" />
     <Compile Include="MoveFormatter.cs" />
     <Compile Include="Pgn\IPgnSymbol.cs" />
     <Compile Include="Pgn\PgnAnnotation.cs" />
