Replace AssemblyDescription attributes with a shared entry in Directory.Build.props.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,2 +1,5 @@
 ﻿<Project>
+  <PropertyGroup>
+    <Description>Hosted on https://github.com/PenguinF/sandra-three</Description>
+  </PropertyGroup>
 </Project>
