Replace AssemblyProduct attribute with a shared entry in Directory.Build.props. Changes its value for some projects from 'Eutherion' to 'SandraChess'.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 ﻿<Project>
   <PropertyGroup>
     <Company>Eutherion</Company>
+    <Product>SandraChess</Product>
     <Version>0.5.1.0</Version>
     <FileVersion>0.5.1.0</FileVersion>
     <Description>Hosted on https://github.com/PenguinF/sandra-three</Description>
