Prevent SDK build tool from appending '/net472' to output paths, since we're building for one target anyway.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,5 +6,7 @@
     <FileVersion>0.5.1.0</FileVersion>
     <Description>Hosted on https://github.com/PenguinF/sandra-three</Description>
     <Copyright>Copyright © 2004-$([System.DateTime]::Now.Year) - Henk Nicolai</Copyright>
+    <!-- We're just building to /Bin, so don't append /net472 to it. -->
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
 </Project>
