--- a/Sandra.Chess/Sandra.Chess.csproj
+++ b/Sandra.Chess/Sandra.Chess.csproj
@@ -1,136 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5E121C5-A874-4FEF-9FF5-56285420CFF6}</ProjectGuid>
+    <TargetFramework>net472</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sandra.Chess</RootNamespace>
-    <AssemblyName>Sandra.Chess</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
     <OutputPath>$(SolutionDir)Bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>$(SolutionDir)Bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
+    <PackageReference Include="Eutherion.Common" Version="1.5.1" />
+    <PackageReference Include="Eutherion.Text.Json" Version="1.5.1" />
+    <PackageReference Include="Eutherion.UIActions" Version="1.5.1" />
+    <PackageReference Include="Eutherion.Utilities" Version="1.5.1" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ChessConstants.cs" />
-    <Compile Include="ChessTypes.cs" />
-    <Compile Include="ColorSquareIndexedArray.cs" />
-    <Compile Include="EnumIndexedArray.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Move.cs" />
-    <Compile Include="MoveCheckResult.cs" />
-    <Compile Include="MoveFormatter.cs" />
-    <Compile Include="Pgn\IPgnSymbol.cs" />
-    <Compile Include="Pgn\PgnAnnotation.cs" />
-    <Compile Include="Pgn\PgnAsteriskSyntax.cs" />
-    <Compile Include="Pgn\PgnBackgroundListSyntax.cs" />
-    <Compile Include="Pgn\PgnBackgroundSyntax.cs" />
-    <Compile Include="Pgn\PgnBackgroundSyntaxVisitor.cs" />
-    <Compile Include="Pgn\PgnBlackWinMarkerSyntax.cs" />
-    <Compile Include="Pgn\PgnBracketCloseSyntax.cs" />
-    <Compile Include="Pgn\PgnBracketOpenSyntax.cs" />
-    <Compile Include="Pgn\PgnCommentSyntax.cs" />
-    <Compile Include="Pgn\PgnDrawMarkerSyntax.cs" />
-    <Compile Include="Pgn\PgnEmptyNagSyntax.cs" />
-    <Compile Include="Pgn\PgnEmptySyntax.cs" />
-    <Compile Include="Pgn\PgnErrorCode.cs" />
-    <Compile Include="Pgn\PgnErrorInfo.cs" />
-    <Compile Include="Pgn\PgnErrorLevel.cs" />
-    <Compile Include="Pgn\PgnErrorTagValueSyntax.cs" />
-    <Compile Include="Pgn\PgnEscapeSyntax.cs" />
-    <Compile Include="Pgn\PgnGameListSyntax.cs" />
-    <Compile Include="Pgn\PgnGameResult.cs" />
-    <Compile Include="Pgn\PgnGameResultSyntax.cs" />
-    <Compile Include="Pgn\PgnGameSyntax.cs" />
-    <Compile Include="Pgn\PgnIllegalCharacterSyntax.cs" />
-    <Compile Include="Pgn\PgnMoveFormatter.cs" />
-    <Compile Include="Pgn\PgnMoveNumberSyntax.cs" />
-    <Compile Include="Pgn\PgnMoveSyntax.cs" />
-    <Compile Include="Pgn\PgnNagSyntax.cs" />
-    <Compile Include="Pgn\PgnOrphanParenthesisCloseSyntax.cs" />
-    <Compile Include="Pgn\PgnOverflowNagSyntax.cs" />
-    <Compile Include="Pgn\PgnParenthesisCloseSyntax.cs" />
-    <Compile Include="Pgn\PgnParenthesisOpenSyntax.cs" />
-    <Compile Include="Pgn\PgnParser.cs" />
-    <Compile Include="Pgn\PgnParserCharacterClass.cs" />
-    <Compile Include="Pgn\PgnPeriodSyntax.cs" />
-    <Compile Include="Pgn\PgnPlyFloatItemListSyntax.cs" />
-    <Compile Include="Pgn\PgnPlyFloatItemSyntax.cs" />
-    <Compile Include="Pgn\PgnPlyListSyntax.cs" />
-    <Compile Include="Pgn\PgnPlySyntax.cs" />
-    <Compile Include="Pgn\PgnSymbolStateMachine.cs" />
-    <Compile Include="Pgn\PgnSymbolType.cs" />
-    <Compile Include="Pgn\PgnSymbolVisitor.cs" />
-    <Compile Include="Pgn\PgnSyntax.cs" />
-    <Compile Include="Pgn\PgnTagElementInMoveTreeSyntax.cs" />
-    <Compile Include="Pgn\PgnTagElementSyntax.cs" />
-    <Compile Include="Pgn\PgnTagElementSyntaxVisitor.cs" />
-    <Compile Include="Pgn\PgnTagElementWithTriviaSyntax.cs" />
-    <Compile Include="Pgn\PgnTagNameSyntax.cs" />
-    <Compile Include="Pgn\PgnTagPairSyntax.cs" />
-    <Compile Include="Pgn\PgnTagSectionSyntax.cs" />
-    <Compile Include="Pgn\PgnTagValueSyntax.cs" />
-    <Compile Include="Pgn\PgnTriviaElementSyntax.cs" />
-    <Compile Include="Pgn\PgnTriviaSyntax.cs" />
-    <Compile Include="Pgn\PgnUnrecognizedMoveSyntax.cs" />
-    <Compile Include="Pgn\PgnUnterminatedCommentSyntax.cs" />
-    <Compile Include="Pgn\PgnVariationSyntax.cs" />
-    <Compile Include="Pgn\PgnWhitespaceSyntax.cs" />
-    <Compile Include="Pgn\PgnWhiteWinMarkerSyntax.cs" />
-    <Compile Include="Pgn\RootPgnSyntax.cs" />
-    <Compile Include="Pgn\WithPlyFloatItemsSyntax.cs" />
-    <Compile Include="Pgn\WithTriviaSyntax.cs" />
-    <Compile Include="Position.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadOnlyPosition.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Eutherion.Common">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.Text.Json">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.UIActions">
-      <Version>1.5.1</Version>
-    </PackageReference>
-    <PackageReference Include="Eutherion.Utilities">
-      <Version>1.5.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
