Recover auto-generation of designer files if resource files are updated.

--- a/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
+++ b/Eutherion/Win.MdiAppTemplate/Eutherion.Win.MdiAppTemplate.csproj
@@ -22,6 +22,11 @@
     <Compile Update="ScintillaEx.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Update="SharedResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SharedResources.resx</DependentUpon>
+    </Compile>
     <Compile Update="SyntaxEditor.cs">
       <SubType>Component</SubType>
     </Compile>
